Agregue contenido en novedades

--- a/pages/novedades.html
+++ b/pages/novedades.html
@@ -155,6 +155,29 @@
         </article>
     </section>
     </div>
+
+    
+    <div class="row row-cols-1 row-cols-md-2 g-4 d-flex justify-content-center m-3">
+        <section class="col-md-4">
+            <article class="card ">
+                <h2 class="card__element">Titulo</h2>
+                <em class="card__element--modifier">subtitulo</em>
+                <img class="card__element--modifier1" src="/assets/novedades3.png" alt="teletrabajo">
+                <p class="card-text p-4 text-justify">Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis dolorem ducimus id eum impedit ab, laudantium doloremque, in perferendis quis atque. Hic aliquam labore quas illo aperiam laborum distinctio tempore! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cupiditate temporibus, at ratione odit ex voluptatibus! Alias quibusdam excepturi animi, autem porro quas facilis incidunt facere iure vero tenetur in quasi! Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis nulla ipsa, praesentium facilis, porro tempore odio sequi exercitationem facere animi inventore distinctio. Ut maiores nam molestias illum! Earum, id sunt?</p>
+            </article>
+        </section>
+    
+        <section class="col-md-4">
+            <article class="card">
+                <h2 class="card__element">Titulo</h2>
+                <em class="card__element--modifier">subtitulo</em>
+                <img class="card__element--modifier1" src="/assets/novedades4.png" alt="teletrabajo">
+                <p class="card-text p-4 text-justify">Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis dolorem ducimus id eum impedit ab, laudantium doloremque, in perferendis quis atque. Hic aliquam labore quas illo aperiam laborum distinctio tempore! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cupiditate temporibus, at ratione odit ex voluptatibus! Alias quibusdam excepturi animi, autem porro quas facilis incidunt facere iure vero tenetur in quasi! Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis nulla ipsa, praesentium facilis, porro tempore odio sequi exercitationem facere animi inventore distinctio. Ut maiores nam molestias illum! Earum, id sunt?</p>
+            </article>
+        </section>
+        </div>
+
+
 </div>
 
 
