Agregue paginas nuevas a las secciones nosotros y servicios, sume contenido

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <!-----------ELEMENTO---------------->
                 <h1 class="header__logo">
                     <!---------MODIFICADOR---------->
-                    <a class=" header__logo header__logo--modifier" href="../../../index.html">RemoteMind</a>
+                    <a class=" header__logo header__logo--modifier" href="index.html">RemoteMind</a>
                 </h1>
             </div>
         </header>
@@ -38,24 +38,26 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="../../../index.html">Home</a>
+                        <a class="nav-link active" aria-current="page" href="index.html">Home</a>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="pages/nosotros.html" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Nosotros</a>
+                        <a class="nav-link dropdown-toggle" href="pages/nosotros.html" id="navbarDropdown" role="tabpanel" data-bs-toggle="dropdown" aria-expanded="false">Nosotros</a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <li><a class="dropdown-item" href="pages/nosotros.html">Postulaciones</a></li>
-                        <li><a class="dropdown-item" href="pages/nosotros.html">Paises</a></li>
+                        <li><a class="dropdown-item" href="pages/postulaciones.html">Postulaciones</a></li>
                         <li><hr class="dropdown-divider"></li>
-                        <li><a class="dropdown-item" href="pages/nosotros.html">Visas</a></li>
+                        <li><a class="dropdown-item" href="pages/paises.html">Paises</a></li>
+                        <li><hr class="dropdown-divider"></li>
+                        <li><a class="dropdown-item" href="pages/visas.html">Visas</a></li>
                     </ul>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="pages/servicios.html" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Servicios</a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <li><a class="dropdown-item" href="pages/servicios.html">Free</a></li>
-                        <li><a class="dropdown-item" href="pages/servicios.html">Standar Plus</a></li>
+                        <li><a class="dropdown-item" href="pages/free.html">Free</a></li>
                         <li><hr class="dropdown-divider"></li>
-                        <li><a class="dropdown-item" href="pages/servicios.html">Premium</a></li>
+                        <li><a class="dropdown-item" href="pages/standard.html">Standard Plus</a></li>
+                        <li><hr class="dropdown-divider"></li>
+                        <li><a class="dropdown-item" href="pages/premium.html">Premium</a></li>
                     </ul>
                     </li>
                     <li class="nav-item">
