--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -23,7 +23,7 @@
                 <!-----------ELEMENTO---------------->
                 <h1 class="header__logo">
                     <!---------MODIFICADOR---------->
-                    <a class=" header__logo header__logo--modifier" href="/index.html">RemoteMind</a>
+                    <a class=" header__logo header__logo--modifier" href="../index.html">RemoteMind</a>
                 </h1>
             </div>
         </header>
@@ -38,24 +38,26 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="/index.html">Home</a>
+                        <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="nosotros.html" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Nosotros</a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <li><a class="dropdown-item" href="nosotros.html">Postulaciones</a></li>
-                        <li><a class="dropdown-item" href="nosotros.html">Paises</a></li>
+                        <li><a class="dropdown-item" href="postulaciones.html">Postulaciones</a></li>
                         <li><hr class="dropdown-divider"></li>
-                        <li><a class="dropdown-item" href="nosotros.html">Visas</a></li>
+                        <li><a class="dropdown-item" href="paises.html">Paises</a></li>
+                        <li><hr class="dropdown-divider"></li>
+                        <li><a class="dropdown-item" href="visas.html">Visas</a></li>
                     </ul>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="servicios.html" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Servicios</a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <li><a class="dropdown-item" href="servicios.html">Free</a></li>
-                        <li><a class="dropdown-item" href="servicios.html">Standar Plus</a></li>
+                        <li><a class="dropdown-item" href="free.html">Free</a></li>
                         <li><hr class="dropdown-divider"></li>
-                        <li><a class="dropdown-item" href="servicios.html">Premium</a></li>
+                        <li><a class="dropdown-item" href="standard.html">Standard Plus</a></li>
+                        <li><hr class="dropdown-divider"></li>
+                        <li><a class="dropdown-item" href="premium.html">Premium</a></li>
                     </ul>
                     </li>
                     <li class="nav-item">
@@ -250,7 +252,7 @@
 
             <div class="col-md-2">
             <div class="card2">
-                <img class="card2__element" src="/assets/REPUBLICA CHECA.jpg" alt="checa">
+                <img class="card2__element" src="/assets/CHECA.jpg" alt="checa">
                 <!--Acá va un texto-->
                 <p class="card2__element--modifier"></p>
             </div>
@@ -295,7 +297,7 @@
             </section>
                 <article class="container">
                     <div class="row">
-                        <img class="mockup" src="/assets/multipantalla.png" alt="">
+                        <img class="mockup" src="/assets/multipantalla.png" alt="dispositivos electronicos">
 
                     <div class="col">
                         <section class="card3">
