--- a/pages/servicios.html
+++ b/pages/servicios.html
@@ -25,7 +25,7 @@
                 <!-----------ELEMENTO---------------->
                 <h1 class="header__logo">
                     <!---------MODIFICADOR---------->
-                    <a class=" header__logo header__logo--modifier" href="/index.html">RemoteMind</a>
+                    <a class=" header__logo header__logo--modifier" href="../index.html">RemoteMind</a>
                 </h1>
             </div>
         </header>
@@ -40,24 +40,24 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="/index.html">Home</a>
+                        <a class="nav-link active" aria-current="page" href="../index.html">Home</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="nosotros.html" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Nosotros</a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <li><a class="dropdown-item" href="nosotros.html">Postulaciones</a></li>
-                        <li><a class="dropdown-item" href="nosotros.html">Paises</a></li>
+                        <li><a class="dropdown-item" href="postulaciones.html">Postulaciones</a></li>
+                        <li><a class="dropdown-item" href="paises.html">Paises</a></li>
                         <li><hr class="dropdown-divider"></li>
-                        <li><a class="dropdown-item" href="nosotros.html">Visas</a></li>
+                        <li><a class="dropdown-item" href="visas.html">Visas</a></li>
                     </ul>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="servicios.html" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Servicios</a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <li><a class="dropdown-item" href="servicios.html">Free</a></li>
-                        <li><a class="dropdown-item" href="servicios.html">Standar Plus</a></li>
+                        <li><a class="dropdown-item" href="free.html">Free</a></li>
+                        <li><a class="dropdown-item" href="standard.html">Standard Plus</a></li>
                         <li><hr class="dropdown-divider"></li>
-                        <li><a class="dropdown-item" href="servicios.html">Premium</a></li>
+                        <li><a class="dropdown-item" href="premium.html">Premium</a></li>
                     </ul>
                     </li>
                     <li class="nav-item">
