Agrgue contenido a las paginas free,standard y premium. Modifique banner y contacto

--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
                         <!------------BLOQUE 4------------->
                         <div class="imagen">
                             <!--ELEMENTO-->
-                            <img class="imagen__final" src="assets/personas3.jpg" alt="">
+                            <img class="imagen__final" src="assets/planes (1).jpg" alt="imagen">
                         </div>
                     </section>
                 </div>
@@ -293,7 +293,7 @@
             <!-------------ELEMENTO--------------->
             <h5 class="text__element">
                 <!---------MODIFICADOR------------>
-                <a class="text__element text__element--modifier" href="#">remotemind.com</a>
+                <a class="text__element text__element--modifier" href="index.html">remotemind.com</a>
             </h5>
         </div>
         <!-- Copyright -->
