--- a/pages/postulaciones.html
+++ b/pages/postulaciones.html
@@ -326,7 +326,7 @@
             
             <!-- Instagram -->
             <!-------------MODIFICADOR------------->
-            <a class="footer__element--modifier" href=https://www.instagram.com" role="button"><i class="fab fa-instagram"></i></a>
+            <a class="footer__element--modifier" href="https://www.instagram.com" role="button"><i class="fab fa-instagram"></i></a>
             
             <!-- Linkedin -->
             <a class="footer__element" href="https://ar.linkedin.com" role="button"><i class="fab fa-linkedin-in"></i></a>
@@ -346,7 +346,7 @@
             <!-------------ELEMENTO--------------->
             <h5 class="text__element">
                 <!---------MODIFICADOR------------>
-                <a class="text__element text__element--modifier" href="#">remotemind.com</a>
+                <a class="text__element text__element--modifier" href="../index.html">remotemind.com</a>
             </h5>
         </div>
             <!-- Copyright -->
