--- a/pages/novedades.html
+++ b/pages/novedades.html
@@ -78,37 +78,19 @@
             </div>
             </nav>
             <!--Fin del Nav-->
-            <!--Comienzo de Carrousel-->
-            <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
-                <div class="carousel-indicators">
-                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
-                </div>
-                <div class="carousel-inner">
-                    <div class="carousel-item active">
-                    <img src="/assets/1Portada.png" class="d-block w-100" alt="portada">
-                    </div>
-                    <div class="carousel-item">
-                    <img src="/assets/2Portada.png" class="d-block w-100" alt="portada">
-                    </div>
-                    <div class="carousel-item">
-                    <img src="/assets/3Portada.png" class="d-block w-100" alt="portada">
+            
+
+            <!--Comienzo banner-->
+        <div class="banner p-5 text-center bg-image" style="background-image: url('../assets/novedades.jpg');">
+            <div class="mask mt-5 mb-2">
+                <div class="d-flex justify-content-center align-items-center h-100">
+                    <div class=" textoPortada action text-white d-block">
+                        <h2 class="textoPortada__element mt-5 mb-3 p-2">Novedades</h2>
                     </div>
                 </div>
-                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
-                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Previous</span>
-                </button>
-                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
-                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Next</span>
-                </button>
             </div>
-            <!------Fin del Carrousel------>
-
-
-
+        </div>
+    <!-- Fin banner -->
 
 <!---------------Comienzo de secciones------------->
 
@@ -277,7 +259,7 @@
             <!-------------ELEMENTO--------------->
             <h4 class="text__element">
                 <!---------MODIFICADOR------------>
-                <a class="text__element text__element--modifier" href="#">remotemind.com</a>
+                <a class="text__element text__element--modifier" href="../index.html">remotemind.com</a>
             </h4>
         </div>
             <!-- Copyright -->
