--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -105,7 +105,7 @@
 
         
             <div class="row m-5 d-flex justify-content-center ">
-                <div class="col-md-2">
+                <div class="col-md-3">
                     <div class="card1">
                         <i class="icon1 fab fa-fly"></i>
                         <h3 class="card1__element">Full-Stack Developer</h3>
@@ -118,7 +118,7 @@
                     </div>
                 </div>
 
-                <div class="col-md-2">
+                <div class="col-md-3">
                     <div class="card1">
                         <i class="icon2 fab fa-ebay"></i>
                         <h3 class="card1__element">Javascript Engineer</h3>
@@ -131,7 +131,7 @@
                     </div>
                 </div>
 
-                <div class="col-md-2">
+                <div class="col-md-3">
                     <div class="card1">
                         <i class="icon3 fab fa-grav"></i>
                         <h3 class="card1__element">UX Designer</h3>
@@ -145,7 +145,7 @@
                 </div>
             </div>
             <div class="row m-5 d-flex justify-content-center">
-                <div class="col-md-2">
+                <div class="col-md-3">
                     <div class="card1">
                         <i class="icon4 fab fa-canadian-maple-leaf"></i>
                         <h3 class="card1__element">Senior Content Writer</h3>
@@ -158,7 +158,7 @@
                     </div>
                 </div>
 
-                <div class="col-md-2">
+                <div class="col-md-3">
                     <div class="card1">
                         <i class="icon5 fab fa-earlybirds"></i>
                         <h3 class="card1__element">Project Manager</h3>
@@ -171,7 +171,7 @@
                     </div>
                 </div>
 
-                <div class="col-md-2">
+                <div class="col-md-3">
                     <div class="card1">
                         <i class="icon6 fab fa-wizards-of-the-coast"></i>
                         <h3 class="card1__element">Data Scientist</h3>
@@ -203,7 +203,7 @@
 
             <div class="col-md-2">
             <div class="card2">
-                <img class="card2__element" src="/assets/alemania.jpg" alt="alemania">
+                <img class="card2__element" src="/assets/ALE.jpg" alt="alemania">
                 <!--Acá va un texto-->
                 <p class="card2__element--modifier"></p>
             </div>
@@ -211,7 +211,7 @@
 
             <div class="col-md-2">
             <div class="card2">
-                <img class="card2__element" src="/assets/canada.jpg" alt="canada">
+                <img class="card2__element" src="/assets/CAN.jpg" alt="canada">
                 <!--Acá va un texto-->
                 <p class="card2__element--modifier"></p>
             </div>
@@ -219,7 +219,7 @@
 
             <div class="col-md-2">
             <div class="card2">
-                <img class="card2__element" src="/assets/eeuu.jpg" alt="eeuu">
+                <img class="card2__element" src="/assets/EST.jpg" alt="eeuu">
                 <!--Acá va un texto-->
                 <p class="card2__element--modifier"></p>
             </div>
@@ -227,7 +227,7 @@
 
             <div class="col-md-2">
             <div class="card2">
-                <img class="card2__element" src="/assets/islas caiman.jpg" alt="caiman">
+                <img class="card2__element" src="/assets/ISL.jpg" alt="caiman">
                 <!--Acá va un texto-->
                 <p class="card2__element--modifier"></p>
             </div>
@@ -239,7 +239,7 @@
 
             <div class="col-md-2">
             <div class="card2">
-                <img class="card2__element" src="/assets/CHECA.jpg" alt="checa">
+                <img class="card2__element" src="/assets/CHE.jpg" alt="checa">
                 <!--Acá va un texto-->
                 <p class="card2__element--modifier"></p>
             </div>
@@ -247,7 +247,7 @@
 
             <div class="col-md-2">
             <div class="card2">
-                <img class="card2__element" src="/assets/portugal.jpg" alt="portugal">
+                <img class="card2__element" src="/assets/PORT.jpg" alt="portugal">
                 <!--Acá va un texto-->
                 <p class="card2__element--modifier"></p>
             </div>
@@ -255,7 +255,7 @@
 
             <div class="col-md-2">
             <div class="card2">
-                <img class="card2__element" src="/assets/georgia.jpg" alt="georgia">
+                <img class="card2__element" src="/assets/GEO.jpg" alt="georgia">
                 <!--Acá va un texto-->
                 <p class="card2__element--modifier"></p>
             </div>
@@ -263,7 +263,7 @@
 
             <div class="col-md-2">
             <div class="card2">
-                <img class="card2__element" src="/assets/mexico.jpg" alt="mexico">
+                <img class="card2__element" src="/assets/MEX.jpg" alt="mexico">
                 <!--Acá va un texto-->
                 <p class="card2__element--modifier"></p>
             </div>
@@ -284,7 +284,7 @@
             </section>
                 <article class="container">
                     <div class="row">
-                        <img class="mockup" src="/assets/multipantalla.png" alt="dispositivos electronicos">
+                        <img class="mockup" src="/assets/pantallas.jpg" alt="dispositivos electronicos">
 
                     <div class="col">
                         <section class="card3">
