--- a/pages/visas.html
+++ b/pages/visas.html
@@ -149,7 +149,7 @@
     </div>
     </div>
     <div class=" col-md-6 d-flex justify-content-center m-5">
-    <img class="card-img-top" src="/assets/pasaporte (1).jpg" alt="pasaporte">
+    <img class="card-img-top" src="/assets/PAST.jpg" alt="pasaporte">
     </div>
     </article>
     </section>
