modifique enlaces de imagenes

--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -203,7 +203,7 @@
 
             <div class="col-md-2">
             <div class="card2">
-                <img class="card2__element" src="/assets/ALE.jpg" alt="alemania">
+                <img class="card2__element" src="../assets/ALE.jpg" alt="alemania">
                 <!--Acá va un texto-->
                 <p class="card2__element--modifier"></p>
             </div>
@@ -211,7 +211,7 @@
 
             <div class="col-md-2">
             <div class="card2">
-                <img class="card2__element" src="/assets/CAN.jpg" alt="canada">
+                <img class="card2__element" src="../assets/CAN.jpg" alt="canada">
                 <!--Acá va un texto-->
                 <p class="card2__element--modifier"></p>
             </div>
@@ -219,7 +219,7 @@
 
             <div class="col-md-2">
             <div class="card2">
-                <img class="card2__element" src="/assets/EST.jpg" alt="eeuu">
+                <img class="card2__element" src="../assets/EST.jpg" alt="eeuu">
                 <!--Acá va un texto-->
                 <p class="card2__element--modifier"></p>
             </div>
@@ -227,7 +227,7 @@
 
             <div class="col-md-2">
             <div class="card2">
-                <img class="card2__element" src="/assets/ISL.jpg" alt="caiman">
+                <img class="card2__element" src="../assets/ISL.jpg" alt="caiman">
                 <!--Acá va un texto-->
                 <p class="card2__element--modifier"></p>
             </div>
@@ -239,7 +239,7 @@
 
             <div class="col-md-2">
             <div class="card2">
-                <img class="card2__element" src="/assets/CHE.jpg" alt="checa">
+                <img class="card2__element" src="../assets/CHE.jpg" alt="checa">
                 <!--Acá va un texto-->
                 <p class="card2__element--modifier"></p>
             </div>
@@ -247,7 +247,7 @@
 
             <div class="col-md-2">
             <div class="card2">
-                <img class="card2__element" src="/assets/PORT.jpg" alt="portugal">
+                <img class="card2__element" src="../assets/PORT.jpg" alt="portugal">
                 <!--Acá va un texto-->
                 <p class="card2__element--modifier"></p>
             </div>
@@ -255,7 +255,7 @@
 
             <div class="col-md-2">
             <div class="card2">
-                <img class="card2__element" src="/assets/GEO.jpg" alt="georgia">
+                <img class="card2__element" src="../assets/GEO.jpg" alt="georgia">
                 <!--Acá va un texto-->
                 <p class="card2__element--modifier"></p>
             </div>
@@ -263,7 +263,7 @@
 
             <div class="col-md-2">
             <div class="card2">
-                <img class="card2__element" src="/assets/MEX.jpg" alt="mexico">
+                <img class="card2__element" src="../assets/MEX.jpg" alt="mexico">
                 <!--Acá va un texto-->
                 <p class="card2__element--modifier"></p>
             </div>
@@ -284,7 +284,7 @@
             </section>
                 <article class="container">
                     <div class="row">
-                        <img class="mockup" src="/assets/pantallas.jpg" alt="dispositivos electronicos">
+                        <img class="mockup" src="../assets/pantallas.jpg" alt="dispositivos electronicos">
 
                     <div class="col">
                         <section class="card3">
