--- a/pages/novedades.html
+++ b/pages/novedades.html
@@ -108,7 +108,7 @@
         <article class="card">
             <h2 class="card__element">NOMADAS DIGITALES</h2>
             <em class="card__element--modifier">¿Qué es una Visa Nomada Digital?</em>
-            <img class="card__element--modifier1" src="/assets/N1.jpg" alt="trabajo">
+            <img class="card__element--modifier1" src="../assets/N1.jpg" alt="trabajo">
             <p class="card-text p-4 text-justify">Para los que aún no lo saben, Un nómada digital es un profesional que usa las nuevas tecnologías para trabajar, y que lleva a cabo un estilo de vida nómada. Por lo general, los nómadas digitales trabajan de forma remota desde su casa, cafeterías, bibliotecas públicas, etc. en lugar de hacerlo en un lugar de trabajo fijo. Actualmente la cantidad de países que estan creando y brindando visas para nomadas digitales va en aumento. Esto permite que cada vez más trabajores remotos tengan la posibilidad de viajar y vivir hasta 12 meses en el destino elegido.</p>
         </article>
     </section>
@@ -120,7 +120,7 @@
         <article class="card">
             <h2 class="card__element">LA NUEVA NORMALIDAD</h2>
             <em class="card__element--modifier">Viajar en tiempos de pandemia</em>
-            <img class="card__element--modifier1" src="/assets/N2.jpg" alt="viaje">
+            <img class="card__element--modifier1" src="../assets/N2.jpg" alt="viaje">
             <p class="card-text p-4 text-justify">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta adipisci error quidem culpa? Quae ea quisquam debitis et aperiam eligendi neque quaerat saepe nisi, quos quidem, autem esse exercitationem Lorem ipsum dolor sit amet consectetur adipisicing elit. tempore assumenda eos, esse et ut repellat ab fugit quis sunt, veritatis impedit provident? Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum voluptate culpa corrupti dolor recusandae magnam, perferendis delectus adipisci! Magnam velit numquam sit reiciendis magni, eligendi ipsam rerum excepturi molestias veniam!</p>
         </article>
     </section>
@@ -131,7 +131,7 @@
         <article class="card ">
             <h2 class="card__element">Titulo</h2>
             <em class="card__element--modifier">subtitulo</em>
-            <img class="card__element--modifier1" src="/assets/N3.jpg" alt="teletrabajo">
+            <img class="card__element--modifier1" src="../assets/N3.jpg" alt="teletrabajo">
             <p class="card-text p-4 text-justify">Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis dolorem ducimus id eum impedit ab, laudantium doloremque, in perferendis quis atque. Hic aliquam labore quas illo aperiam laborum distinctio tempore! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cupiditate temporibus, at ratione odit ex voluptatibus! Alias quibusdam excepturi animi, autem porro quas facilis incidunt facere iure vero tenetur in quasi! Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis nulla ipsa, praesentium facilis, porro tempore odio sequi exercitationem facere animi inventore distinctio. Ut maiores nam molestias illum! Earum, id sunt?</p>
         </article>
     </section>
@@ -140,7 +140,7 @@
         <article class="card">
             <h2 class="card__element">Titulo</h2>
             <em class="card__element--modifier">subtitulo</em>
-            <img class="card__element--modifier1" src="/assets/N4.jpg" alt="teletrabajo">
+            <img class="card__element--modifier1" src="../assets/N4.jpg" alt="teletrabajo">
             <p class="card-text p-4 text-justify">Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis dolorem ducimus id eum impedit ab, laudantium doloremque, in perferendis quis atque. Hic aliquam labore quas illo aperiam laborum distinctio tempore! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cupiditate temporibus, at ratione odit ex voluptatibus! Alias quibusdam excepturi animi, autem porro quas facilis incidunt facere iure vero tenetur in quasi! Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis nulla ipsa, praesentium facilis, porro tempore odio sequi exercitationem facere animi inventore distinctio. Ut maiores nam molestias illum! Earum, id sunt?</p>
         </article>
     </section>
@@ -152,7 +152,7 @@
             <article class="card ">
                 <h2 class="card__element">Titulo</h2>
                 <em class="card__element--modifier">subtitulo</em>
-                <img class="card__element--modifier1" src="/assets/N5.jpg" alt="teletrabajo">
+                <img class="card__element--modifier1" src="../assets/N5.jpg" alt="teletrabajo">
                 <p class="card-text p-4 text-justify">Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis dolorem ducimus id eum impedit ab, laudantium doloremque, in perferendis quis atque. Hic aliquam labore quas illo aperiam laborum distinctio tempore! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cupiditate temporibus, at ratione odit ex voluptatibus! Alias quibusdam excepturi animi, autem porro quas facilis incidunt facere iure vero tenetur in quasi! Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis nulla ipsa, praesentium facilis, porro tempore odio sequi exercitationem facere animi inventore distinctio. Ut maiores nam molestias illum! Earum, id sunt?</p>
             </article>
         </section>
@@ -161,7 +161,7 @@
             <article class="card">
                 <h2 class="card__element">Titulo</h2>
                 <em class="card__element--modifier">subtitulo</em>
-                <img class="card__element--modifier1" src="/assets/N6.jpg" alt="teletrabajo">
+                <img class="card__element--modifier1" src="../assets/N6.jpg" alt="teletrabajo">
                 <p class="card-text p-4 text-justify">Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis dolorem ducimus id eum impedit ab, laudantium doloremque, in perferendis quis atque. Hic aliquam labore quas illo aperiam laborum distinctio tempore! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Cupiditate temporibus, at ratione odit ex voluptatibus! Alias quibusdam excepturi animi, autem porro quas facilis incidunt facere iure vero tenetur in quasi! Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis nulla ipsa, praesentium facilis, porro tempore odio sequi exercitationem facere animi inventore distinctio. Ut maiores nam molestias illum! Earum, id sunt?</p>
             </article>
         </section>
@@ -183,7 +183,7 @@
             <div class="col-sm-2 m-2">
                 <section class="card card-plain p-4">
                     <div class="card-avatar">
-                        <img class="img img-raised rounded" src="/assets/HOMBRE1.png" alt="persona">
+                        <img class="img img-raised rounded" src="../assets/HOMBRE1.png" alt="persona">
                     </div>
                     <div class="card-body">
                         <strong class="card-title">Andrés</strong>
@@ -197,7 +197,7 @@
             <div class="col-sm-2 m-2">
                 <section class="card card-plain p-4">
                     <div class="card-avatar">
-                        <img class="img img-raised rounded" src="/assets/MUJER1.png" alt="persona">
+                        <img class="img img-raised rounded" src="../assets/MUJER1.png" alt="persona">
                     </div>
                     <div class="card-body">
                         <strong class="card-title">Emilia</strong>
@@ -209,7 +209,7 @@
             <div class="col-sm-2 m-2">
                 <section class="card card-plain p-4">
                     <div class="card-avatar">
-                        <img class="img img-raised rounded" src="/assets/HOMBRE2.png" alt="persona">
+                        <img class="img img-raised rounded" src="../assets/HOMBRE2.png" alt="persona">
                     </div>
                     <div class="card-body">
                         <strong class="card-title">Cristian</strong>
