--- a/pages/paises.html
+++ b/pages/paises.html
@@ -108,7 +108,7 @@
                 <div class="col-md-2">
                 <div class="card2">
                     <a href="https://www.germany-visa.org/freelance-visa/" target="_BLANK">
-                        <img class="card2__element" src="/assets/ALE.jpg" alt="alemania">
+                        <img class="card2__element" src="../assets/ALE.jpg" alt="alemania">
                     </a>
                     <p class="card2__element--modifier">Alemania</p>
                 </div>
@@ -117,7 +117,7 @@
                 <div class="col-md-2">
                 <div class="card2">
                     <a href="https://www.nomadasexperience.com/canada/visa-para-canada/" target="_BLANK">
-                        <img class="card2__element" src="/assets/CAN.jpg" alt="canada">
+                        <img class="card2__element" src="../assets/CAN.jpg" alt="canada">
                     </a>
                     <!--Acá va un texto-->
                     <p class="card2__element--modifier">Canadá</p>
@@ -127,7 +127,7 @@
                 <div class="col-md-2">
                 <div class="card2">
                     <a href="https://www.expat.com/es/guia/america-del-norte/ee-uu/arizona/16839-conviertete-en-un-nomada-digital-en-estados-unidos.html" target="_BLANK">
-                        <img class="card2__element" src="/assets/EST.jpg" alt="eeuu">
+                        <img class="card2__element" src="../assets/EST.jpg" alt="eeuu">
                     </a>
                     <!--Acá va un texto-->
                     <p class="card2__element--modifier">Estados Unidos</p>
@@ -137,7 +137,7 @@
                 <div class="col-md-2">
                 <div class="card2">
                     <a href="https://www.visitcaymanislands.com/es-ar/global-citizen-concierge/about-the-program/program-overview" target="_BLANK">
-                        <img class="card2__element" src="/assets/ISL.jpg" alt="caiman">
+                        <img class="card2__element" src="../assets/ISL.jpg" alt="caiman">
                     </a>
                     <!--Acá va un texto-->
                     <p class="card2__element--modifier">Islas Caiman</p>
@@ -151,7 +151,7 @@
                 <div class="col-md-2">
                 <div class="card2">
                     <a href="https://www.mzv.cz/jnp/en/information_for_aliens/long_stay_visa/long_stay_visa.html" target="_BLANK">
-                        <img class="card2__element" src="/assets/CHE.jpg" alt="checa">
+                        <img class="card2__element" src="../assets/CHE.jpg" alt="checa">
                     </a>
                     <!--Acá va un texto-->
                     <p class="card2__element--modifier">República Checa</p>
@@ -161,7 +161,7 @@
                 <div class="col-md-2">
                 <div class="card2">
                     <a href="https://www.etiasvisa.com/es/noticias/nomadas-digitales-ue" target="_BLANK">
-                        <img class="card2__element" src="/assets/PORT.jpg" alt="portugal">
+                        <img class="card2__element" src="../assets/PORT.jpg" alt="portugal">
                     </a>
                     <!--Acá va un texto-->
                     <p class="card2__element--modifier">Portugal</p>
@@ -171,7 +171,7 @@
                 <div class="col-md-2">
                 <div class="card2">
                     <a href="https://agenda.ge/en/news/2020/2265" target="_BLANK">
-                        <img class="card2__element" src="/assets/GEO.jpg" alt="georgia">
+                        <img class="card2__element" src="../assets/GEO.jpg" alt="georgia">
                     </a>
                     <!--Acá va un texto-->
                     <p class="card2__element--modifier">Georgia</p>
@@ -181,7 +181,7 @@
                 <div class="col-md-2">
                 <div class="card2">
                     <a href="https://residencies.io/residency/mexico/temporary-residency/mx1#targetText=Once%20the%20visa%20application%20is,may%20take%201%2D3%20months" target="_BLANK">
-                        <img class="card2__element" src="/assets/MEX.jpg" alt="mexico">
+                        <img class="card2__element" src="../assets/MEX.jpg" alt="mexico">
                     </a>
                     <!--Acá va un texto-->
                     <p class="card2__element--modifier">Mexico</p>
@@ -199,7 +199,7 @@
             <article class="col-md-2">
             <div class="card">
                 <div class="bg-image hover-overlay ripple" data-mdb-ripple-color="light">
-                    <img src="/assets/BAR.jpg"class="img-fluid"/>
+                    <img src="../assets/BAR.jpg"class="img-fluid"/>
                     <div class="mask" style="background-color: rgba(251, 251, 251, 0.15);">
                 </div>
                 
@@ -217,7 +217,7 @@
             <article class="col-md-2">
                 <div class="card">
                     <div class="bg-image hover-overlay ripple" data-mdb-ripple-color="light">
-                        <img src="/assets/COS.jpg"class="img-fluid"/>
+                        <img src="../assets/COS.jpg"class="img-fluid"/>
                         <div class="mask" style="background-color: rgba(251, 251, 251, 0.15);">
                         </div>
                     </div>
@@ -236,7 +236,7 @@
             <article class="col-md-2">
             <div class="card">
                 <div class="bg-image hover-overlay ripple" data-mdb-ripple-color="light">
-                    <img src="/assets/ESTO.jpg"class="img-fluid"/>
+                    <img src="../assets/ESTO.jpg"class="img-fluid"/>
                     <div class="mask" style="background-color: rgba(251, 251, 251, 0.15);">
                     </div>
                 </div>
@@ -253,7 +253,7 @@
             <article class="col-md-2">
                 <div class="card">
                     <div class="bg-image hover-overlay ripple" data-mdb-ripple-color="light">
-                        <img src="/assets/CRO.jpg"class="img-fluid"/>
+                        <img src="../assets/CRO.jpg"class="img-fluid"/>
                         <div class="mask" style="background-color: rgba(251, 251, 251, 0.15);">
                         </div>
                     </div>
